--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -64,3 +64,14 @@ body {
 	bottom:0px;
 	text-align:center;
 }
+
+.input-hover {
+	background:rgba(255,255,255,0);
+	border:1px solid rgba(255,255,255,0);
+	box-shadow: none;
+	text-align:center;
+}
+.input-hover:hover {
+	border:1px solid #66afe9;
+	transition:all .5s linear;
+}
