--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -75,3 +75,13 @@ body {
 	border:1px solid #66afe9;
 	transition:all .5s linear;
 }
+
+.product-thumbnail {
+	box-shadow: 2px 2px 2px rgba(0,0,0,0.6);
+	padding:10px;
+}
+
+.product-thumbnail:hover {
+	transition:all .5s linear;
+	background-color: #eeeeee;
+}
