--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -65,6 +65,10 @@ body {
 	text-align:center;
 }
 
+.breadcrumb i {
+	padding:10px;
+}
+
 .input-hover {
 	background:rgba(255,255,255,0);
 	border:1px solid rgba(255,255,255,0);
